Fixed all CMake, package, msg files, created all nodes, circular dependency error

--- a/graphical_user_interface/CMakeLists.txt
+++ b/graphical_user_interface/CMakeLists.txt
@@ -8,6 +8,8 @@ project(graphical_user_interface)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  state_machine
+  sensing_and_actuation
   message_generation
   message_runtime
   roscpp
