--- a/guidance_navigation_control/CMakeLists.txt
+++ b/guidance_navigation_control/CMakeLists.txt
@@ -8,6 +8,7 @@ project(guidance_navigation_control)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  state_machine
   message_generation
   roscpp
   rospy
