--- a/state_machine/CMakeLists.txt
+++ b/state_machine/CMakeLists.txt
@@ -8,6 +8,8 @@ project(state_machine)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  computer_vision
+  sensing_and_actuation
   message_generation
   roscpp
   rospy
