--- a/guidance_navigation_control/package.xml
+++ b/guidance_navigation_control/package.xml
@@ -53,6 +53,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>state_machine</build_depend>
+
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -60,7 +62,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-
+  <exec_depend>state_machine</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
