Added launch files, fixed circular dependency error

--- a/guidance_navigation_control/CMakeLists.txt
+++ b/guidance_navigation_control/CMakeLists.txt
@@ -8,7 +8,6 @@ project(guidance_navigation_control)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  state_machine
   message_generation
   roscpp
   rospy
@@ -52,6 +51,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
    FILES
    controlCommand.msg
+   task_desiredAction.msg 
  )
 
 ## Generate services in the 'srv' folder
