--- a/graphical_user_interface/package.xml
+++ b/graphical_user_interface/package.xml
@@ -53,7 +53,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>state_machine</build_depend>
+  <build_depend>guidance_navigation_control</build_depend>
   <build_depend>sensing_and_actuation</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -62,7 +62,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>state_machine</exec_depend>
+  <exec_depend>guidance_navigation_control</exec_depend>
   <exec_depend>sensing_and_actuation</exec_depend>
 
 
