--- a/state_machine/package.xml
+++ b/state_machine/package.xml
@@ -55,6 +55,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>computer_vision</build_depend>
   <build_depend>sensing_and_actuation</build_depend>
+  <build_depend>guidance_navigation_control</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -64,6 +65,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>computer_vision</exec_depend>
   <exec_depend>sensing_and_actuation</exec_depend>
+  <exec_depend>guidance_navigation_control</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
